# bless

./: .bzrignore  .gitignore  AUTHORS  Bless.sln  Makefile.am  NEWS  README  README.packaging  autogen.sh  bless-script.in  bless.mdp  bless.mds  bless.mi  bless.spec  bless.userprefs  configure.ac  meson.build  meson_options.txt
builder/: ConfigureDefines.cs.in  (+5 more)
data/: Makefile.am  README.bless-courier  bless-16-bytes-per-row.layout  bless-all-number-bases.layout  bless-binary-ascii.layout  bless-default.layout  bless.desktop  bless.desktop.in  bless.glade  default-preferences.xml  help_script.sh  help_script.tmpl.in  meson.build
data/ui/: BitwiseOperationsPlugin.ui  ConversionTablePlugin.ui  ExportDialog.ui  FindReplacePlugin.ui  GotoOffsetPlugin.ui  LayoutSelectionDialog.ui  MainWindow.ui  PreferencesDialog.ui  ProgressDialog.ui  ProgressDisplayPlugin.ui  SelectRangePlugin.ui
doc/developer/: Makefile.am  bless-docs.source  bless.xmi
doc/developer/en/: Bless.Buffers.xml  Bless.Util.xml  index.xml
doc/developer/en/Bless.Buffers/: ByteBuffer+ChangedHandler.xml  ByteBuffer.xml  FileBuffer.xml  IBuffer.xml  SaveAsOperation+SaveAsStage.xml  SaveAsOperation.xml  SaveOperation+SaveStage.xml  SaveOperation.xml  Segment.xml  SegmentCollection.xml  SimpleBuffer.xml
doc/developer/en/Bless.Util/: BaseConverter.xml  ByteArray.xml  ConfigureDefines.xml  Deque`1.xml  FileResourcePath.xml  List`1+Node.xml  List`1.xml  ProgressAction.xml  ProgressCallback.xml  Range.xml  RangeCollection.xml  TempFile.xml  ThreadedAsyncOperation+OperationResult.xml  ThreadedAsyncOperation.xml  ThreadedAsyncResult.xml
doc/user/: Makefile.am  bless-manual.omf.in  bless-manual.xml  meson.build
doc/user/C/: index.docbook
src/: Bless.csproj  Makefile.am  bless-bin.in  bless-script.in  bless.mi  meson.build
src/ByteBuffer/: Buffer.cs  ByteBuffer.cs  ChangeBuffer.cs  FileBuffer.cs  Makefile.am  SaveAsOperation.cs  Segment.cs  SimpleBuffer.cs
src/Properties/: AssemblyInfo.cs
src/buffers/: Bless.Buffers.bi  Bless.Buffers.csproj  ByteBuffer.cs  ByteBufferAction.cs  ChangeBuffer.cs  FileBuffer.cs  IBuffer.cs  ISaveState.cs  Makefile.am  SaveAsOperation.cs  SaveInPlaceOperation.cs  SaveOperation.cs  Segment.cs  SegmentCollection.cs  SimpleBuffer.cs
src/buffers/Properties/: AssemblyInfo.cs
src/gui/: Bless.Gui.bi  Bless.Gui.csproj  Bless.bi  DataBook.cs  DataBookFinder.cs  DataView.cs  DataViewControl.cs  DataViewDisplay.cs  FileChangedBar.cs  FileService.cs  HistoryMenuItem.cs  InfoService.cs  Layout.cs  LayoutManager.cs  MainWindow.cs  Makefile.am  Services.cs  SessionService.cs  UIService.cs  WidgetGroup.cs
src/gui/Properties/: AssemblyInfo.cs
src/gui/areas/: Area.cs  AreaGroup.cs  AsciiArea.cs  BinaryArea.cs  Bless.Gui.Areas.Plugins.bi  Bless.Gui.Areas.Plugins.csproj  Bless.Gui.Areas.bi  Bless.Gui.Areas.csproj  DecimalArea.cs  GroupedArea.cs  HexArea.cs  Highlight.cs  Makefile.am  OctalArea.cs  OffsetArea.cs  SeparatorArea.cs
src/gui/areas/Properties/: AssemblyInfo.cs
src/gui/dialogs/: AboutDialog.cs  Alert.cs  ErrorAlert.cs  ExportDialog.cs  FileOverwriteAlert.cs  FindDialog.cs  GotoOffsetDialog.cs  InformationAlert.cs  LayoutSelectionDialog.cs  Makefile.am  PreferencesDialog.cs  ProgressDialog.cs  ReplaceDialog.cs  RevertConfirmationAlert.cs  SaveConfirmationAlert.cs  SaveConfirmationMultiAlert.cs  WarningAlert.cs
src/gui/drawers/: AsciiDrawer.cs  BinaryDrawer.cs  Bless.Gui.Drawers.bi  Bless.Gui.Drawers.csproj  DecimalDrawer.cs  Drawer.cs  HexDrawer.cs  Makefile.am  OctalDrawer.cs  PixmapManager.cs
src/gui/drawers/Properties/: AssemblyInfo.cs
src/gui/plugins/: BitwiseOperationsPlugin.cs  Bless.Gui.Plugins.bi  Bless.Gui.Plugins.csproj  ConversionTablePlugin.cs  CopyOffsetPlugin.cs  EditOperationsPlugin.cs  FileExportPlugin.cs  FileOperationsPlugin.cs  FindReplacePlugin.cs  GotoOffsetPlugin.cs  HelpOperationsPlugin.cs  HistoryPlugin.cs  InfobarPlugin.cs  Makefile.am  PatternMatchHighlightPlugin.cs  ProgressDisplayPlugin.cs  SelectLayoutPlugin.cs  SelectRangePlugin.cs  StatisticsPlugin.cs  app.config
src/gui/plugins/Properties/: AssemblyInfo.cs
src/plugins/: AreaPlugin.cs  Bless.Plugins.bi  Bless.Plugins.csproj  ExportPlugin.cs  GuiPlugin.cs  IPluginPreferences.cs  Makefile.am  Plugin.cs  PluginManager.cs
src/tools/: Bless.Tools.bi  Bless.Tools.csproj  History.cs  Makefile.am  Preferences.cs  Session.cs
src/tools/Properties/: AssemblyInfo.cs
src/tools/export/: Bless.Tools.Export.bi  Bless.Tools.Export.csproj  ExporterOperation.cs  IExportBuilder.cs  IExporter.cs  IPatternExporter.cs  InterpretedPatternExporter.cs  Makefile.am
src/tools/export/Properties/: AssemblyInfo.cs
src/tools/export/plugins/: Bless.Tools.Export.Plugins.bi  Bless.Tools.Export.Plugins.csproj  HTMLExportBuilder.cs  HTMLExportPlugin.cs  Makefile.am  TextExportBuilder.cs  TextExportPlugin.cs
src/tools/export/plugins/Properties/: AssemblyInfo.cs
src/tools/find/: BMFindStrategy.cs  Bless.Tools.Find.bi  Bless.Tools.Find.csproj  FindAsyncResult.cs  FindOperations.cs  IFindStrategy.cs  IFinder.cs  Makefile.am  SimpleFindStrategy.cs
src/tools/find/Properties/: AssemblyInfo.cs
src/util/: BaseConverter.cs  Bless.Util.bi  Bless.Util.csproj  ByteArray.cs  ConfigureDefines.cs.in  ConfigureDefines.cs.tmpl.in  Deque.cs  FileResourcePath.cs  IntervalTree.cs  List.cs  Makefile.am  Portable.cs  ProgressCallback.cs  Range.cs  RangeCollection.cs  RedBlackTree.cs  TempFile.cs  ThreadedAsyncOperation.cs
src/util/Properties/: AssemblyInfo.cs
tests/: Makefile.am  meson.build
tests/ByteBuffer/: ByteBufferTests.cs  ChangeBufferTests.cs  SegmentTests.cs
tests/buffers/: BlessTests.Buffers.bi  ByteBufferTests.cs  ChangeBufferTests.cs  FileBufferTests.cs  Makefile.am  SegmentCollectionTests.cs  SegmentTests.cs  SimpleBufferTests.cs
tests/tools/: Makefile.am
tests/tools/export/: BlessTests.Tools.Export.bi  ExporterTests.cs  Makefile.am
tests/util/: BaseConverterTests.cs  BlessTests.Util.bi  ByteArrayTests.cs  DequeTests.cs  IntervalTreeTests.cs  ListTests.cs  Makefile.am  RangeTests.cs  RedBlackTreeTests.cs
(+5 files in other folders)
