DOCS=$(srcdir)/en/*.xml \
	$(srcdir)/en/*/*.xml

EXTRA_DIST=$(DOCS) bless-docs.source

#install-data-local: 
#	$(INSTALL) -d $(DESTDIR)$(datadir)/doc/$(PACKAGE_NAME)/developer
#	$(INSTALL_DATA) $(MD_FILES) $(DESTDIR)$(datadir)/doc/$(PACKAGE_NAME)/developer

#uninstall-local:
#	rm -rf $(DESTDIR)$(datadir)/doc/$(PACKAGE_NAME)/developer
